--- a/F4-Gyro/F4-Gyro.ioc
+++ b/F4-Gyro/F4-Gyro.ioc
@@ -23,9 +23,10 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=USART1
+Mcu.IP8=USB_DEVICE
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -50,24 +51,26 @@ Mcu.Pin25=PA11
 Mcu.Pin26=PA12
 Mcu.Pin27=PA13
 Mcu.Pin28=PA14
-Mcu.Pin29=PC10
+Mcu.Pin29=PA15
 Mcu.Pin3=PE5
-Mcu.Pin30=PC12
-Mcu.Pin31=PD4
-Mcu.Pin32=PD5
-Mcu.Pin33=PB3
-Mcu.Pin34=PB6
-Mcu.Pin35=PB9
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PC10
+Mcu.Pin31=PC12
+Mcu.Pin32=PD4
+Mcu.Pin33=PD5
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PB9
+Mcu.Pin38=PE1
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PC14-OSC32_IN
+Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PH0 - OSC_IN
 Mcu.Pin7=PH1 - OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=39
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -112,6 +115,8 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=Asynchronous
+PA15.Signal=USART1_TX
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -160,6 +165,8 @@ PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PB9.GPIO_Mode=GPIO_MODE_AF_OD
@@ -313,7 +320,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S2_Init-I2S2-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S2_Init-I2S2-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -362,6 +369,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=CalculateBaudRate,BaudRatePrescaler,Mode,VirtualType,Direction
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
