--- a/F4-Gyro/F4-Gyro.ioc
+++ b/F4-Gyro/F4-Gyro.ioc
@@ -74,17 +74,15 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
-PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA10.GPIO_Label=OTG_FS_ID
+PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PA10.GPIO_PuPd=GPIO_NOPULL
-PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.Locked=true
 PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -103,129 +101,108 @@ PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA12.Locked=true
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=SWDIO
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.GPIOParameters=GPIO_Label
-PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
+PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
 PA4.Mode=Half_Duplex_Master
 PA4.Signal=I2S3_WS
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA5.GPIO_Mode=GPIO_MODE_AF_PP
 PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA6.GPIO_Mode=GPIO_MODE_AF_PP
 PA6.GPIO_PuPd=GPIO_NOPULL
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA7.GPIO_Label=SPI1_MOSI [LIS302DL_SDA/SDI/SDO]
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA7.GPIO_PuPd=GPIO_NOPULL
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA9.GPIO_Label=VBUS_FS
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA9.GPIO_Mode=GPIO_MODE_INPUT
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
-PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
+PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
 PB10.Signal=I2S2_CK
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB2.GPIO_Label=BOOT1
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
 PB2.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB6.GPIO_Label=Audio_SCL [CS43L22_SCL]
+PB6.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_PuPd,GPIO_Mode
 PB6.GPIO_Mode=GPIO_MODE_AF_OD
 PB6.GPIO_PuPd=GPIO_NOPULL
-PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB6.GPIO_PuPdOD=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
-PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_PuPd,GPIO_Mode
 PB9.GPIO_Mode=GPIO_MODE_AF_OD
 PB9.GPIO_PuPd=GPIO_NOPULL
-PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB9.GPIO_PuPdOD=GPIO_PULLUP
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PC0.GPIO_Label=OTG_FS_PowerSwitchOn
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC0.GPIO_PuPd=GPIO_NOPULL
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
-PC0.PinState=GPIO_PIN_SET
+PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
-PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
+PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PC10.GPIO_PuPd=GPIO_NOPULL
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Locked=true
 PC10.Mode=Half_Duplex_Master
 PC10.Signal=I2S3_CK
-PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
+PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
 PC12.GPIO_PuPd=GPIO_NOPULL
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC12.Locked=true
 PC12.Mode=Half_Duplex_Master
 PC12.Signal=I2S3_SD
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
-PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
-PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
+PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC3.GPIO_Mode=GPIO_MODE_AF_PP
 PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
-PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
+PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -240,61 +217,61 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD12.GPIO_Label=LD4 [Green Led]
+PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD12.Locked=true
+PD12.PinState=GPIO_PIN_RESET
 PD12.Signal=GPIO_Output
-PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD13.GPIO_Label=LD3 [Orange Led]
+PD13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD13.GPIO_PuPd=GPIO_NOPULL
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD13.Locked=true
+PD13.PinState=GPIO_PIN_RESET
 PD13.Signal=GPIO_Output
-PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD14.GPIO_Label=LD5 [Red Led]
+PD14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD14.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD14.Locked=true
+PD14.PinState=GPIO_PIN_RESET
 PD14.Signal=GPIO_Output
-PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD15.GPIO_Label=LD6 [Blue Led]
+PD15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
+PD15.PinState=GPIO_PIN_RESET
 PD15.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
+PD4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PD4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD4.GPIO_PuPd=GPIO_NOPULL
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD4.Locked=true
+PD4.PinState=GPIO_PIN_RESET
 PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PD5.GPIO_Label=OTG_FS_OverCurrent
+PD5.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
 PD5.Signal=GPIO_Input
-PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PE1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPXTI1
-PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
+PE3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PE3.GPIO_PuPd=GPIO_NOPULL
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_RESET
 PE3.Signal=GPIO_Output
-PH0-OSC_IN.GPIOParameters=GPIO_Label
-PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
-PH1-OSC_OUT.GPIOParameters=GPIO_Label
-PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
