Add TrueSTUDIO project

--- a/F4-Gyro-RTOS/F4-Gyro-RTOS.ioc
+++ b/F4-Gyro-RTOS/F4-Gyro-RTOS.ioc
@@ -301,14 +301,14 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=F4-Gyro-RTOS.ioc
 ProjectManager.ProjectName=F4-Gyro-RTOS
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5
+ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
